<resources>
    <string name="app_name">Image Translation</string>
    <string name="image_translation">Image Translation</string>
    <string name="go">go</string>
    <!--<string name="enter_url">Enter URL</string>-->
    <string name="enter_url">Enter URL</string>
    <string name="naver">Naver</string>
    <string name="google">Google</string>
    <string name="ytube">Ytube</string>
    <string name="daum">Daum</string>
    <string name="hongik">Hongik</string>
    <string name="plus">+</string>
    <string name="Back">←</string>
    <string name="SCap">CAP</string>
    <string name="Refresh">F5</string>
    <string name="Forward">→</string>
    <string name="Setting">Setting</string>
    <string name="language_selection">번역 할 언어를 선택하세요.</string>
    <string name="select_language">Select Language</string>
    <string name="cancleBtn">CANCLE</string>
    <string name="okBtn">OK</string>
    <string name="mothertongue">mothertongue</string>
    <string name="language">language</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_email_password">EmailPasswordActivity</string>
</resources>