<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:onClick="hideKeyboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/menuBack"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/Back" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/menuForward"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/Forward" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/menuRefresh"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/Refresh" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/menuSC"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/SCap"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/enter_url"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:layout_weight="5"
            android:autofillHints=""
            android:ems="10"
            android:text="@string/enter_url"
            android:inputType="text"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/buttonGO"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/go"
            app:backgroundTint="@color/navy_it" />

    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="631dp"
        android:layout_gravity="top">

    </WebView>


</LinearLayout>