<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/image_translation"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="48dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/enter_url"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_gravity="top"
                android:autofillHints=""
                android:ems="10"
                android:text="@string/enter_url"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonGO"
                android:layout_width="65dp"
                android:layout_height="48dp"
                android:layout_gravity="top"
                android:text="@string/go"
                app:backgroundTint="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="48dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonD"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/daum"
                app:backgroundTint="@color/black" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonG"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/google"
                app:backgroundTint="@color/black" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonY"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/ytube"
                app:backgroundTint="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="48dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonN"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/naver"
                app:backgroundTint="@color/black" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonH"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/hongik"
                app:backgroundTint="@color/black"
                app:layout_constraintHorizontal_bias="0.5" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonP"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/plus"
                app:backgroundTint="@color/black" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>