<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="53sp"
        android:id="@+id/select_language"
        android:text="@string/select_language"
        android:textSize="30sp"
        android:gravity="center"/>

    <ListView
        android:id="@+id/languageList"
        android:layout_width="match_parent"
        android:layout_height="411dp"
        android:choiceMode="singleChoice"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/okBtn" />
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/cancleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancleBtn" />
    </LinearLayout>


</LinearLayout>